# dynet

./: LICENSE  README.md  configure.ac
src/: Makefile.am  main.c
