# Prelude.
AC_INIT([dynet], [0.2], [ebo@mail.utexas.edu])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([src/main.c])
#Check for programs.
AC_PROG_CC
# Check for libraries.
# Check for header files.
# Check for typedefs, structures, and compiler characteristics.
# Check for library functions.
# Output files.
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
